GNOME Bugzilla – Bug 740730
rtspconnection: don't remove child source if parent source is already destroyed
Last modified: 2014-12-12 16:06:58 UTC
Created attachment 291518 [details] [review] gst-plugins-base patch Getting a SIGTRAP when shutting down when there are data left in backlog when running with GDB. GLib-CRITICAL **: g_source_remove_child_source: assertion `child_source->priv->parent_source == source’ failed Trace/breakpoint trap (core dumped)
commit e3a212e0d447b29741c3ac24633b329df5e91f53 Author: Göran Jönsson <goranjn@axis.com> Date: Tue Nov 25 13:31:48 2014 +0100 rtspconnection: No remove child if destroyed. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=740730
Cherry-picked into 1.4 branch.